Finalizacao do texto de introducao

--- a/RelatorioFinalTotal.rmd
+++ b/RelatorioFinalTotal.rmd
@@ -87,7 +87,31 @@ Os Programas devem debater e promover o oferecimento de disciplinas com conteúd
 
 ### ** Biologia Animal
 
+Os programas de pós-graduação da CB I foram norteados, no Coleta 2016, a reavaliar e sintetizar as propostas do programa em pós-graduação em seus vários aspectos, descrevendo as alterações que aconteceram e os efeitos muito significativos que afetaram sua qualidade. Os programas de pós-graduação  ainda descreveram mudanças no seu Corpo Docente, nas Disciplinas, além das diretrizes e discernimentos das deliberações adotadas. As propostas dos Programas demostraram a assiduidade e também extensão da grande amplitude de Linhas de Pesquisa e Multidisciplinaridade particularidades da CB I, englobando as seguintes áreas: Genética (Humana, Animal, Vegetal e de Microrganismos); Biologia Geral (Comparada, Estrutural, Funcional, Toxicologia); Biologia Molecular; Biologia Celular; Biologia do Desenvolvimento; Bioinformática e Biologia de Sistemas. A área de Bioinformática mostrou ampliação na maioria dos programas de pós-graduação acontecendo um impacto destaque do edital de Biologia Computacional. Todas as propostas foram avaliadas adequadas. Contudo, em alguns programas de pós-graduação, houve precisão de readequações que foram assinaladas nos pareceres específicos (Capes, 2017).
+
+As propostas do Programa são bem formuladas e descrevem de maneira satisfatória as suas particularidades mais importantes. Os objetivos expostos são claros e coerentes com o perfil acadêmico dos programas. A análise minudenciada da Proposta, em relação aos programas da área CBI, corroborou que o Programa avaliado apresentara desempenhos considerados bons. A observação delineada do perfil, adequação, distribuição de atividades e dedicação dos docentes no quadriênio, em relação aos programas da área CBI, demonstrou que o Programa analisados ofereceram desempenho positivo (Capes, 2017).
+
+A importância da qualidade da formação acadêmica e da produção científica são objetivos prioritários das ações da CB I. Esse atributo pode ser aferido por meio de indicadores que vêm sendo aprimorados no conjunto internacional, e também no sistema CAPES de avaliação. O enfoco fundamental da produção científica na CB I é artigo em periódico. Essa produção cogita a qualidade da área que tem consideração internacional. (Capes, 2017).
+
+“Os limites dos estratos do QUALIS têm sido crescentes na última década e neste quadriênio atingiram patamares elevados, comparáveis à produção qualificada de pesquisadores internacionais. Há ainda Programas que não atingiram os patamares de produção científica da área, além da distribuição heterogênea da produção entre os docentes do NP. Isso é reflexo natural do estágio de desenvolvimento e consolidação dos PPGs.” (Capes, 2017).
+
+A análise particularizada do desenvolvimento científico e técnica do NP no quadriênio e sua repartição entre os docentes em relação aos programas da área CBI corroborou que os Programas analisados proporcionaram desempenho avaliado positivamente (Capes, 2017).
+
+Esse programa apresenta relevância regional, nacional e/ou internacional evidenciada por convênios, parcerias interinstitucionais. Nele notam-se formidáveis impactos tecnológicos, com o desenvolvimento de novas técnicas, produtos e metodologias. Os impactos em nível regional têm acontecido por meio das ações de extensão, com destaque para projetos na área da educação. O programa tem destacado esforços na exposição da ciência ao público leigo. O programa também buscado integrar discentes do ensino médio as pesquisas estimulando-os e fornecendo bolsas. Ele possui relevância regional e/ou nacional, adotando como base as pesquisas desenvolvidas pelos corpos docente e discente. A proposta destaca o papel do Programa na formação de recursos humanos especializados com potencial para desempenhar funções em órgãos públicos e privados (Capes, 2017).
+
 ### ** Biologia Molecular
+
+No levantamento de 2017 o número de discentes para o Programa de Pós-Graduação em Biologia Molecular foi de 4.781 alunos sendo 2.863 de Mestrado e 1.918 de Doutorado; dos docentes, 27 são permanentes e 11 são colaboradores. As linhas de pesquisa seguem vertentes definidas: Genética (Humana, Animal, Vegetal e de Microrganismos); Biologia Geral (Comparada, Estrutural, Funcional, Toxicologia), que pleiteia áreas descritivas e experimentais de forma geral; Biologia Molecular, que estuda experimentalmente e teoricamente processos biológicos a nível molecular e atômico; Biologia Celular, que estuda o funcionamento da célula como um todo, ou de cada um de seus aparatos; Biologia do Desenvolvimento, que estuda a formação de organismos, dos mais simples aos complexos; Bioinformática, que delineia e gera modelos para padrões de expressão ou estuda dinâmicas moleculares; Biologia de Sistemas, que estuda a interação e a formação dos sistemas para organismos vivos. Os projetos de pesquisa do programa seguem diversas vertentes, desde a neuropsicológica até a física da interação de moléculas. Dos diversos projetos, há o enfoque em bioinformática que foca em simulações e modelagens e em biologia molecular, que estuda experimentalmente a interação entre biomoléculas.
+
+A última avaliação quadrienal fomenta a progressão do PPG em Biologia Molecular, frisando as modificações que ocorreram no corpo docente, que alterou as tomadas de decisões e impactos na produção científica - positivamente - em relação a avaliação anterior. A avaliação mostra em seu resultado que os recursos obtidos pelos os docentes foram oriunda de procura a agencias de fomento à pesquisa. O conjunto de disciplinas apresentado, segundo a avaliação, é de acordo com a proposta, tangenciando o conhecimento necessário para a formação acadêmica do indivíduo de forma abrangente e consistente. A avaliação também frisa a presença de Double-Degrees com universidades estado unidenses e doutorados sanduíche com outras diversas instituições internacionais.
+
+Quanto ao corpo docente em geral, o número destes se manteve significativamente constante em relação ao triênio anterior, tanto na quantidade de permanentes quanto a de associados. Não houve mudança significativa na composição destes, nem na abrangência de áreas - o que não desqualificou estes docentes quanto a sua adequação a proposta do programa. A avaliação do corpo docente fomentou que o número de bolsistas de produtividade diminuiu em relação a avaliação do triênio anterior. A proporção ode orientados em mestrado e doutorado é de aproximadamente um para um, onde o número mediano de orientados de mestrado e doutorado para cada orientador é o mesmo.
+
+A avaliação dos discentes demonstrou que houve um aumento na matrícula e formação de doutores e a diminuição dos mesmos para mestrado em relação ao triênio anterior. A maioria dos professores orienta menos que doze alunos, sendo que um quinto dos docentes orienta somente um aluno. Alunos que publicam com em estratos de revistas de A1 a B1 tem em ao menos metade das vezes, a participação de um professor conjuntamente. Houve também discentes ganhadores de prêmios dentro desta PPG.
+
+A avaliação da produção intelectual evidenciou claramente a melhoria da qualidade do conteúdo publicado pelos docentes e discentes do PPG como um todo. Onde cerca de três quartos de todos os artigos publicados por participantes desta PPG tiveram avaliação Qualis superior a B2. Toda esta produção de conhecimento resulta na valorização internacional desta área de conhecimento de de seus participantes.
+
+O impacto social mais evidente avaliado foi a criação de novas ferramentas e métodos que auxiliam na mudança de paradigma do cientista da área, na qual, esta PPG vem contribuindo incessantemente - de acordo com a avaliação. É exaltada a participação de todos os docentes deste programa em intercâmbios para congressos, pesquisas e afins, que determina a importância regional, nacional e internacional que esta PPG tem sobre sua área de atuação, cooperando de forma eficaz com meios nacionais e internacionais a estar impelida na divulgação do conhecimento científico da área.
 
 ### Ciências Biológicas III
 
