--- a/RelatorioFinalTotal.rmd
+++ b/RelatorioFinalTotal.rmd
@@ -1215,6 +1215,7 @@ especialidade.240.orient %>%
   labs(x='Participacao internacional',y='Orientações concluídas')
 ```
 
+Na imagem acima notamos que os docentes - do Programa de Pós-Graduação em Biologia Animal - que participam de congressos internacionais orientam mais alunos do que os que não comparecem a estes congressos. Cada cor em cada ponto representa a área em que cada pesquisador está inserido, no eixo ordenado há a quantidade de orientações e no eixo abcisso se este participou ou não de congressos internacionais.
 
 ## Biologia Microbiana
 
