--- a/RelatorioFinalTotal.rmd
+++ b/RelatorioFinalTotal.rmd
@@ -2,7 +2,7 @@
 title: Avaliação dos Programas de pós-graduação de Ciências Biologicas I e III e dos currículos dos professores / pesquisadores cadastrados
 disciplina: Ciência de Dados para Todos (Data Science For All) - 2018.1/ Universidade de Brasília (Jorge H. C. Fernandes, Ricardo B. Sampaio, João Ribas de Moura e Jerônimo A. Filho)
 author: Emanuel Victor A. Coelho 14/0137475, Jonas Prado 13/0117277 , Maria Júlia
-  G. R. Rodrigues 14/0153713
+  G. R. Rodrigues 14/0153713 - Grupo 10
 programas de pós-graduação vinculados: Biologia Animal, Biologia Molecular, Biologia Microbiana e Patologia Molecular
 date: "05/12/2018"
 output:
