--- a/RelatorioFinalTotal.rmd
+++ b/RelatorioFinalTotal.rmd
@@ -1,9 +1,10 @@
 ---
-title: Análise da Produção Científica e Acadêmica da Universidade de Brasília - Relatório
-  Parcial sobre Pós-Graduação em Ciências Biológicas
+title: Avaliação dos Programas de pós-graduação de Ciências Biologicas I e III e dos currículos dos professores / pesquisadores cadastrados
+disciplina: Ciência de Dados para Todos (Data Science For All) - 2018.1/ Universidade de Brasília (Jorge H. C. Fernandes, Ricardo B. Sampaio, João Ribas de Moura e Jerônimo A. Filho)
 author: Emanuel Victor A. Coelho 14/0137475, Jonas Prado 13/0117277 , Maria Júlia
   G. R. Rodrigues 14/0153713
-date: "18/11/2018"
+programas de pós-graduação vinculados: Biologia Animal, Biologia Molecular, Biologia Microbiana e Patologia Molecular
+date: "05/12/2018"
 output:
   pdf_document:
     latex_engine: xelatex
@@ -243,7 +244,7 @@ for (i in 1:length(perfil.313)) {
 }
 ```
 
-# Análise das listas:
+### Análise das listas:
 *Número de áreas de atuação cumulativas:*
 ```{r echo=FALSE, message=TRUE, warning=TRUE}
 print(c('Biologia Animal:',sum(sapply(perfil.240, function(x) nrow(x$areas_de_atuacao)))),quote=FALSE)
@@ -718,7 +719,7 @@ Por fim, ocorre a tarefa de formatação dos dados, que é a realização de mod
 
 Para tornar a análise mais fácil de ser feita e até mesmo para possibilitar a realização de comparações ao final, os mesmos procedimentos foram realizados para os três programas de pós-graduação. Além disso, é importante ressaltar que as variáveis e estruturas montadas foram nomeados de forma mnemônica permitindo a distinção de diferentes programas e aspectos, como orientações, publicações, entre outros.
 
-##Análise dos dados no formato lista
+###Análise dos dados no formato lista
 *Número de Publicacoes em periódicos*
 ```{r echo=FALSE}
 print(c('Biologia Animal:',sum(sapply(public.240$PERIODICO, function(x) length(x$natureza)))),quote=FALSE)
@@ -1018,7 +1019,7 @@ grafo = graph.disjoint.union(g.240, g.242, g.243, g.313)%>%
 ##CRISP-DM Fases 4 a 6 - Resultados e visualizações:
 Foram escolhidos alguns resultados, em relação aos dados encontrados durante o processo, para serem plotados em gráficos.
 
-#Biologia Animal
+##Biologia Animal
 
 ### Grafico de barras; periodicos por ano
 ```{r echo=FALSE}
@@ -1745,6 +1746,8 @@ perfil.313.areas %>%
 
 Em um primeiro momento, observa-se que o pesquisador *outliar* comentado anteriormente apresenta valores discrepantes tanto para número de publicações quanto para orientações concluídas. A ideia discutida até aqui sobre a valorização de pluralidade de disciplinas, entretanto, não implica necessariamente em maior produtividade no PPG - o único pesquisador a trabalhar em 4 grandes áreas não apresentou número de orientações e/ou publicações destoante dos demais docentes.
 
+##Análises globais
+
 ###Quantidade de Orientações e Participação internacional por PPG
 
 ```{r echo=FALSE}
@@ -1774,7 +1777,7 @@ edge.size = 3,
 
 Este grafo demonstra a rede de cooperação, peso, quantidades de publicações e senioridade dos indivíduos e da cooperação entre eles. Cada círculo representa um docente dentro de um PPG indicado pela cor, onde: azul é a PPG de Biologia Animal; amarelo é PPG de Biologia Microbiana; verde corresponde a PPG de Biologia Molecular; e vermelho a PPG de Patologia Molecular. Já para cada aresta, as cores determinam a senioridade entre os dois pontos, onde verde é 9, azul é 8 e laranja é 7; quanto ao diametro é dado pela a quantidade de áreas um vértice compartilha com o outro; já para a ligação da aresta, esta é dada pelos os periódicos em comum para cada vértice, indicando cooperação. A partir deste grafo é possível entender que cada programa de pós graduação se mantém praticamente isolado, exceto pelos os docentes que se repetem para cada PPG. É notável que a maioria destas PPGs tem muita intracomunicação, deixando poucos docentes isolados exceto pela a PPG de Biologia Microbiana que tiveram seis docentes completamente isolados de qualquer outra PPG e dela mesma, tendo o maior número de isolamentos. É possível perceber também que a docente de sobrenome Cynthia Maria Kyaw é uma comunicadora entre PPGs, pois intercomunica as PPGs de Biologia Molecular e Biologia Microbiana e além disso previne o isolamento entre sua própria PPG formando uma ponte entre um e outro grupo de docentes que estariam isolados se não colaborassem com esta. Em cada uma das PPGs há docentes em destaque pela a quantidade de publicações (indicada pelo o diâmetro do vértice), mas é possível perceber que o PPG de Patologia Molecular tem uma dominância de um docente que publica aproximadamente o triplo que o anterior em publicações, o que resulta em um grande vértice central. Este dominante também está com a maioria das interligações de seu PPG, sendo portanto um canal de informação dentro de seu grupo.
 
-##Bibliografia
+#Bibliografia
 
 "SciVal Metrics Guidebook." ELSEVIER, 2014.
 
